--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
@@ -12,6 +13,7 @@
     "cra-template": "1.1.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^8.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3"
   },
